docs/versioned_docs/version-3.19/10-intro/index.md
# Welcome to Woodpecker

Woodpecker is a CI/CD tool. It is designed to be lightweight, simple to use and fast. Before we dive into the details, let's have a look at some of the basics.

## Have you ever heard of CI/CD or pipelines?

Don't worry if you haven't. We'll guide you through the basics. CI/CD stands for Continuous Integration and Continuous Deployment. It's basically like a conveyor belt that moves your code from development to production doing all kinds of
checks, tests and routines along the way. A typical pipeline might include the following steps:

1. Running tests
2. Building your application
3. Deploying your application

[Have a deeper look into the idea of CI/CD](https://www.redhat.com/en/topics/devops/what-is-ci-cd)

## Do you know containers?

If you are already using containers in your daily workflow, you'll for sure love Woodpecker. If not yet, you'll be amazed how easy it is to get started with [containers](https://opencontainers.org/).

## Already have access to a Woodpecker instance?

Then you might want to jump directly into it and [start creating your first pipelines](../20-usage/10-intro.md).

## Want to start from scratch and deploy your own Woodpecker instance?

Woodpecker is lightweight and even runs on a Raspberry Pi. You can follow the [deployment guide](../30-administration/00-general.md) to set up your own Woodpecker instance.

If you want to try a pipeline before installing a server, you can also run workflow files locally with [`woodpecker-cli exec`](../20-usage/73-local-execution.md).
